--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -124,11 +124,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{d}{dc}L(f(x_{0}),y)=0.$$\n",
-    "\n",
-    "$$E_{y|x}[\\frac{d}{dc}(c-y)^{2}|x=x_{0}]=E_{y|x}[0|x=x_{0}].$$\n",
-    "\n",
-    "$$E[c|x=x_{0}]=E[y|x=x_{0}]$$\n",
+    "$$\\frac{d}{dc}L(f(x_{0}),y)=0.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E_{y|x}[\\frac{d}{dc}(c-y)^{2}|x=x_{0}]=E_{y|x}[0|x=x_{0}].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E[c|x=x_{0}]=E[y|x=x_{0}]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "$$E[f(x_{0})|x=x_{0}]=E[y|x=x_{0}]$$"
    ]
@@ -139,7 +155,7 @@
    "source": [
     "Consequently we can see that the most optimal solution is:\n",
     "\n",
-    "$$f(x)=E[y|x].$$"
+    "$$f^{*}(x)=E[y|x].$$"
    ]
   },
   {
