--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1) $$|\\Omega|=2\\frac{3!}{2!}+2\\frac{3!}{3!}.$$\n",
+    "(1) $$|\\Omega|=2\\frac{3!}{2!}+2\\frac{3!}{3!}=8.$$\n",
     "\n",
-    "(2) $$|F|=\\frac{3!}{2!}+1.$$   "
+    "(2) $$|F|=\\frac{3!}{2!}+1=4.$$   "
    ]
   },
   {
@@ -70,15 +70,85 @@
    "metadata": {},
    "source": [
     "### Problem 7\n",
-    "Derive the optimal algorithm $f^{*}(X)$ assuming $L(f(X), Y) = |(f(X) -Y)|$"
+    "Derive the optimal algorithm $f^{*}(x)$ assuming $L(f(x), y) = |(f(x) -y)|$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$EPE(f) = E_{x,y}[L(f(x),y)] = \\int \\int L(f(x),y) \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int L(f(x),y) \\rho_{y|x} dy\\right) dx.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$\n",
+    "\n",
+    "$$EPE(f) = E_{x,y}[|f(x)-y|] = E_{x}[E_{y|x}[|f(x)-y|]].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us treat the problem point-wise $x=x_{0}$, $f(x_{0})=c.$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a chosen point $x=x_{0}$:\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$L(f(x_{0}),y)=E_{y|x}[|f(x)-y||x=x_{0}].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above equation is minimal when $\\frac{d}{dc}L(f(x_{0}),y)=0$, which is synonymous with:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E_{y|x}[sign(f(x)-y)|x=x_{0}]=E_{y|x}[0|x=x_{0}],$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is equivalent to:\n",
+    "    \n",
+    "$$\\int_{f(x)}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy.$$\n",
+    "\n",
+    "The above equation impies that:\n",
+    "\n",
+    "$$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we get:\n",
+    "    \n",
+    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2}$$,\n",
+    "\n",
+    "which indicates that the most optimal $f(x)$ can be interpreted as median."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,13 +180,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us treat the problem point-wise $x=x_{0}$, $f(x_{0})=c$:"
+    "Let us treat the problem point-wise $x=x_{0}$, $f(x_{0})=c$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For a single point $x=x_{0}$:\n",
+    "\n",
     "$$L(f(x_{0}),y)=E_{y|x}[(f(x)-y)^{2}|x=x_{0}]=E_{y|x}[(c-y)^{2}|x=x_{0}].$$"
    ]
   },
@@ -153,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consequently we can see that the most optimal solution is:\n",
+    "Consequently, we can see that the most optimal solution is:\n",
     "\n",
     "$$f^{*}(x)=E[y|x].$$"
    ]
@@ -283,15 +355,20 @@
     "\n",
     "Now we expand the parenthesis of arguments from the statement above:\n",
     "\n",
-    "$$\\text{Var[x+y]}=E[x^{2}+y^{2}+2xy]+E[E^{2}[x]+E^{2}[y]+2E[x]E[y]]-2E[xE[x]+yE[y]-xE[y]-yE[x]].$$\n",
-    "\n",
+    "$$\\text{Var[x+y]}=E[x^{2}+y^{2}+2xy]+E[E^{2}[x]+E^{2}[y]+2E[x]E[y]]-2E[xE[x]+yE[y]-xE[y]-yE[x]].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Having expanded the arguments we can proceede with using linearity, we get:\n",
     "\n",
     "$$\\text{Var[x+y]}=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$\n",
     "\n",
     "Now let us rearrange the terms so that we obtain the formula we were asked to prove:\n",
     "\n",
-    "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=\\text{Var}[x]+\\text{Var}[y]+2Cov[x,y].$$"
+    "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=\\text{Var}[x]+\\text{Var}[y]+2\\text{Cov}[x,y].$$"
    ]
   },
   {
