--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "Finally we get:\n",
     "    \n",
-    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2}$$,\n",
+    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
     "which indicates that the most optimal $f(x)$ can be interpreted as median."
    ]
