--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -132,11 +132,11 @@
    "source": [
     "which is equivalent to:\n",
     "    \n",
-    "$$\\int_{f(x)}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy.$$\n",
+    "$$\\int_{f(x_{0})}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy.$$\n",
     "\n",
     "The above equation impies that:\n",
     "\n",
-    "$$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy.$$"
+    "$$2\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy.$$"
    ]
   },
   {
@@ -145,9 +145,9 @@
    "source": [
     "Finally we get:\n",
     "    \n",
-    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
+    "$$\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
-    "which indicates that the most optimal $f(x)$ can be interpreted as median."
+    "which indicates that the most optimal $f(x_{0})$ can be interpreted as median."
    ]
   },
   {
