--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -86,44 +86,23 @@
    "source": [
     "$$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$\n",
     "\n",
-    "$$EPE(f) = E_{x,y}[|f(x)-y|] = E_{x}[E_{y|x}[|f(x)-y|]].$$"
+    "$$EPE(f) = E_{x,y}[|f(x)-y||x] = E_{x}[E_{y|x}[|f(x)-y||x]].$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us treat the problem point-wise $x=x_{0}$, $f(x_{0})=c.$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For a chosen point $x=x_{0}$:\n",
+    "EPE will be minimal for:\n",
     "    \n",
-    "    "
+    "$$\\frac{d}{d[f(x)]}E_{y|x}\\left[|f(x)-y||x\\right]=E_{y|x}\\left[\\left\\{\\frac{d}{d[f(x)]}|f(x)-y|\\right\\}|x\\right]=0.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$L(f(x_{0}),y)=E_{y|x}[|f(x)-y||x=x_{0}].$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above equation is minimal when $\\frac{d}{dc}L(f(x_{0}),y)=0$, which is synonymous with:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$E_{y|x}[sign(f(x)-y)|x=x_{0}]=E_{y|x}[0|x=x_{0}],$$"
+    "$$E_{y|x}[\\text{sign}(f(x)-y)|x]=E_{y|x}[0|x],$$"
    ]
   },
   {
@@ -132,11 +111,14 @@
    "source": [
     "which is equivalent to:\n",
     "    \n",
-    "$$\\int_{f(x_{0})}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy.$$\n",
+    "$$\\int_{f(x)}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy.$$\n",
     "\n",
     "The above equation impies that:\n",
     "\n",
-    "$$2\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy.$$"
+    "$$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1,$$\n",
+    "\n",
+    "\n",
+    "$$2\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1.$$"
    ]
   },
   {
@@ -145,9 +127,11 @@
    "source": [
     "Finally we get:\n",
     "    \n",
-    "$$\\int_{-\\infty}^{f(x_{0})}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
+    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
-    "which indicates that the most optimal $f(x_{0})$ can be interpreted as median."
+    "$$\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
+    "\n",
+    "which indicates that the most optimal $f(x)$ can be interpreted as median of $\\rho_{y|x}$."
    ]
   },
   {
@@ -189,14 +173,11 @@
    "source": [
     "For a single point $x=x_{0}$:\n",
     "\n",
-    "$$L(f(x_{0}),y)=E_{y|x}[(f(x)-y)^{2}|x=x_{0}]=E_{y|x}[(c-y)^{2}|x=x_{0}].$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{d}{dc}L(f(x_{0}),y)=0.$$"
+    "$$E_{y|x}[(f(x)-y)^{2}|x=x_{0}]=E_{y|x}[(c-y)^{2}|x=x_{0}].$$\n",
+    "\n",
+    "EPE will be minimal when:\n",
+    "\n",
+    "$$\\frac{d}{dc}E_{y|x}[(c-y)^{2}|x=x_{0}]=0.$$\n"
    ]
   },
   {
@@ -261,7 +242,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3)$$\\text{Var}[x]=E[(x-E[x])^{2}]=E[(x-\\mu)^{2}]=\\int (x-\\mu)^{2} f(x) dx = \\int x^{2} f(x) dx - 2\\mu\\int x f(x) dx+\\mu^{2}\\int f(x)dx=\\left(\\int x^{2}f(x) dx\\right)-\\mu^{2}=E[x^{2}]-E^{2}[x].$$\n",
+    "(3)$$\\text{Var}[x]=E[(x-E[x])^{2}]=E[(x-\\mu)^{2}]=\\int (x-\\mu)^{2} f(x) dx =\n",
+    "\\int x^{2} f(x) dx - 2\\mu\\int x f(x) dx+\\mu^{2}\\int f(x)dx=\\left(\\int x^{2}f(x) dx\\right)-\\mu^{2}=E[x^{2}]-E^{2}[x].$$\n",
     "\n",
     "QED."
    ]
@@ -342,7 +324,9 @@
    "source": [
     "1. point\n",
     "\n",
-    "$$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=E[(xy-xE[y]-E[x]y+E[x]E[y])]=E[xy]-2E[x]E[y]+E[x]E[y]=E[xy]-E[x]E[y].$$ QED\n"
+    "$$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=$$\n",
+    "$$=E[(xy-xE[y]-E[x]y+E[x]E[y])]=$$\n",
+    "$$=E[xy]-2E[x]E[y]+E[x]E[y]=E[xy]-E[x]E[y].$$ QED\n"
    ]
   },
   {
@@ -351,11 +335,14 @@
    "source": [
     "2. point\n",
     "\n",
-    "$$\\text{Var[x+y]}=E[(x+y-(E[x]+E[y])^{2})]=E[(x+y)^{2}]+E[(E[x]+E[y])^{2}]-2E[(x+y)(E[x]+E[y])].$$\n",
+    "$$\\text{Var[x+y]}=$$\n",
+    "$$=E[(x+y-(E[x]+E[y])^{2})]=$$\n",
+    "$$=E[(x+y)^{2}]+E[(E[x]+E[y])^{2}]-2E[(x+y)(E[x]+E[y])].$$\n",
     "\n",
     "Now we expand the parenthesis of arguments from the statement above:\n",
     "\n",
-    "$$\\text{Var[x+y]}=E[x^{2}+y^{2}+2xy]+E[E^{2}[x]+E^{2}[y]+2E[x]E[y]]-2E[xE[x]+yE[y]-xE[y]-yE[x]].$$"
+    "$$\\text{Var[x+y]}=$$\n",
+    "$$=E[x^{2}+y^{2}+2xy]+E[E^{2}[x]+E^{2}[y]+2E[x]E[y]]-2E[xE[x]+yE[y]-xE[y]-yE[x]].$$"
    ]
   },
   {
@@ -364,11 +351,13 @@
    "source": [
     "Having expanded the arguments we can proceede with using linearity, we get:\n",
     "\n",
-    "$$\\text{Var[x+y]}=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$\n",
+    "$$\\text{Var[x+y]}=$$\n",
+    "$$=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$\n",
     "\n",
     "Now let us rearrange the terms so that we obtain the formula we were asked to prove:\n",
     "\n",
-    "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=\\text{Var}[x]+\\text{Var}[y]+2\\text{Cov}[x,y].$$"
+    "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=$$\n",
+    "$$=\\text{Var}[x]+\\text{Var}[y]+2\\text{Cov}[x,y].$$"
    ]
   },
   {
