--- a/assignment_till_20.11.ipynb
+++ b/assignment_till_20.11.ipynb
@@ -441,8 +441,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$h(x)=p_{Y|X}[r|k]$ is a proper probability function if\n",
-    "$$\\sum_k p_{Y|X}(r|k)=1$$ for all $k$. We have\n",
+    "$h(k)=p_{Y|X}[r|k]$ is a proper probability function if\n",
+    "$$\\sum_r p_{Y|X}[r|k]=1$$ for all $k$. We have\n",
     "\n",
     "$$\\sum_k p_{Y|X}[r|k]=p_{Y|X}[r|0]+p_{Y|X}[r|1]=\\frac{p_{XY}(0,r)}{p_X(0)}+\\frac{p_{XY}(1,r)}{p_X(1)}$$\n"
    ]
