--- a/assignment_till_20.11.ipynb
+++ b/assignment_till_20.11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -416,6 +416,13 @@
        "      <td>2/3</td>\n",
        "      <td>2/3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$$p_{Y|X}[r|0]$$</th>\n",
+       "      <td></td>\n",
+       "      <td>2/3</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -423,7 +430,8 @@
       "text/plain": [
        "                 die =    2    4    6\n",
        "Y=r                       1    0    0\n",
-       "$$p_{Y|X}[r|1]$$        1/3  2/3  2/3"
+       "$$p_{Y|X}[r|1]$$        1/3  2/3  2/3\n",
+       "$$p_{Y|X}[r|0]$$        2/3  1/3  1/3"
       ]
      },
      "metadata": {},
@@ -431,9 +439,9 @@
     }
    ],
    "source": [
-    "Dane=np.array([[\"\",'1','0','0'],[\"\",'1/3','2/3','2/3']])\n",
+    "Dane=np.array([[\"\",'1','0','0'],[\"\",'1/3','2/3','2/3'],[\"\",'2/3','1/3','1/3']])\n",
     " \n",
-    "Dane_display= pd.DataFrame(Dane,columns=['die =','2','4','6'],index=['Y=r','$$p_{Y|X}[r|1]$$'])\n",
+    "Dane_display= pd.DataFrame(Dane,columns=['die =','2','4','6'],index=['Y=r','$$p_{Y|X}[r|1]$$','$$p_{Y|X}[r|0]$$'])\n",
     "display(Dane_display)"
    ]
   },
@@ -441,10 +449,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$h(k)=p_{Y|X}[r|k]$ is a proper probability function if\n",
-    "$$\\sum_r p_{Y|X}[r|k]=1$$ for all $k$. We have\n",
+    "Note that we also computed the conditional PMF for $k=0$, since it will be needed below:\n",
     "\n",
-    "$$\\sum_k p_{Y|X}[r|k]=p_{Y|X}[r|0]+p_{Y|X}[r|1]=\\frac{p_{XY}(0,r)}{p_X(0)}+\\frac{p_{XY}(1,r)}{p_X(1)}$$\n"
+    "$$p_{Y|X}[r|0]=\\frac{p_{XY}(0,r)}{p_X(0)}$$\n",
+    "\n",
+    "and we put it in the table above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$h(k)=p_{Y|X}[r|k]$ is a proper probability function if\n",
+    "$$\\sum_r p_{Y|X}[r|k]=1$$ for all $k$. We have $k=0,1$, so\n",
+    "\n",
+    "-$k=0$:\n",
+    "\n",
+    "$$\\sum_r p_{Y|X}[r|0]=p_{Y|X}[0|0]+p_{Y|X}[1|0]=\\frac{1}{3}+\\frac{2}{3}=1$$\n",
+    "\n",
+    "-$k=1$:\n",
+    "\n",
+    "$$\\sum_r p_{Y|X}[r|1]=p_{Y|X}[0|1]+p_{Y|X}[1|1]=\\frac{2}{3}+\\frac{1}{3}=1$$\n",
+    "\n",
+    "$h(k)$ is indeed a proper probability function."
    ]
   },
   {
@@ -541,9 +568,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E[Y|1]=\\sum_r r\\cdot p_{Y|X}[r|1]=0\\cdot p_{Y|X}[0|1]+p_{Y|X}[1|1]=1/3$$\n",
+    "Note that for the conditional PMF we use the same values in ex. 21, since the event space is the same.\n",
     "\n",
-    "$$E[Y|0]=\\sum_r r\\cdot p_{Y|X}[r|0]=p_{Y|X}[1|0]=2/3$$"
+    "$$E[Y|1]=\\sum_r r\\cdot p_{Y|X}[r|1]=0\\cdot p_{Y|X}[0|1]+p_{Y|X}[1|1]=\\frac{1}{3}$$\n",
+    "\n",
+    "$$E[Y|0]=\\sum_r r\\cdot p_{Y|X}[r|0]=p_{Y|X}[1|0]=\\frac{2}{3}$$"
    ]
   },
   {
