--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solutions to Modern Data Science Problems (probelms till 20.11)\n",
+    "## Solutions to Modern Data Science Problems (probelms till 20.11)\n",
     "by *Mateusz Kmieć* "
    ]
   },
@@ -217,7 +217,7 @@
    "source": [
     "### Problem 12\n",
     "Show that:\n",
-    "$$\\text{Var}[X] = E[X^{2}] – E^{2}[X].$$"
+    "$$\\text{Var}[x] = E[x^{2}] – E^{2}[x].$$"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "Alternatively:\n",
     "    \n",
-    "$$\\text{Var}(x)=E[(x-E[x])^{2}]=E[x^{2}]-2xE[x]+E[x]^{2}=E[x^{2}]-2E[x]E[x]+E^{2}[X]=E[x^{2}]-E^{2}[x].$$\n",
+    "$$\\text{Var}(x)=E[(x-E[x])^{2}]=E[x^{2}]-2xE[x]+E[x]^{2}=E[x^{2}]-2E[x]E[x]+E^{2}[x]=E[x^{2}]-E^{2}[x].$$\n",
     "\n",
     "QED"
    ]
@@ -378,11 +378,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "First of all let us notice that:\n",
+    "\n",
+    "$$p(x|y)=\\frac{p(x,y)}{p(x)}.$$\n",
+    "\n",
+    "We have two prime numbers $\\{2,5\\}$ and three even numbers $\\{2,4,6\\}$ in this set.\n",
+    "Consequently we have:\n",
+    "\n",
+    "$$p(x=1)=\\frac{1}{2},$$\n",
+    "\n",
+    "$$p(x=0)=\\frac{1}{2},$$\n",
+    "\n",
+    "$$p(x=1,y=1)=\\frac{1}{6},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$p(x=0,y=1)=\\frac{1}{6},$$\n",
+    "\n",
+    "$$p(x=0,y=0)=\\frac{2}{6},$$\n",
+    "\n",
+    "$$p(x=1,y=0)=\\frac{2}{6}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That is why we have:\n",
+    "    \n",
+    "$$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$\n",
+    "\n",
+    "$$p(y=0|x=0)=\\frac{p(x=0,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$p(y=0|x=1)=\\frac{p(x=1,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$\n",
+    "\n",
+    "$$p(y=1|x=0)=\\frac{p(x=0,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we substitute these values to the definition of conditional expectation value for the lecture we will get:\n",
+    "\n",
+    "$$E[y|1]=\\sum_r r\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E[y|0]=\\sum_r r\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us notice that:\n",
+    "    \n",
+    "$$\\text{Var}[y|k]=E[y^{2}|k]-\\left(E[y|k]\\right)^{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are looking for $\\text{Var}[y|0]$, $\\text{Var}[y|1]$:\n",
+    "    \n",
+    "$$\\text{Var}[y|1]=E[y^{2}|1]-\\left(E[y|1]\\right)^{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\text{Var}[y|0]=E[y^{2}|0]-\\left(E[y|0]\\right)^{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the only thing left to do is to find $E[y^{2}|1]$ and $E[y^{2}|0]$:\n",
+    "\n",
+    "$$E[y^{2}|1]=\\sum_r r^{2}\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E[y^{2}|0]=\\sum_r r^{2}\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After all of these steps we can finally write the solution:\n",
+    "\n",
+    "$$\\text{Var}[y|1]=\\text{Var}[y|0]=\\frac{2}{9}$$"
+   ]
   }
  ],
  "metadata": {
