--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -383,15 +383,25 @@
    "source": [
     "First of all let us notice that:\n",
     "\n",
-    "$$p(x|y)=\\frac{p(x,y)}{p(x)}.$$\n",
-    "\n",
+    "$$p(x|y)=\\frac{p(x,y)}{p(x)}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We have two prime numbers $\\{2,5\\}$ and three even numbers $\\{2,4,6\\}$ in this set.\n",
     "Consequently we have:\n",
     "\n",
     "$$p(x=1)=\\frac{1}{2},$$\n",
     "\n",
-    "$$p(x=0)=\\frac{1}{2},$$\n",
-    "\n",
+    "$$p(x=0)=\\frac{1}{2},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$p(x=1,y=1)=\\frac{1}{6},$$"
    ]
   },
@@ -399,10 +409,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(x=0,y=1)=\\frac{1}{6},$$\n",
-    "\n",
-    "$$p(x=0,y=0)=\\frac{2}{6},$$\n",
-    "\n",
+    "$$p(x=0,y=1)=\\frac{1}{6},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$p(x=0,y=0)=\\frac{2}{6},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$p(x=1,y=0)=\\frac{2}{6}.$$"
    ]
   },
@@ -412,7 +432,13 @@
    "source": [
     "That is why we have:\n",
     "    \n",
-    "$$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$\n",
+    "$$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "$$p(y=0|x=0)=\\frac{p(x=0,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
    ]
@@ -421,7 +447,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(y=0|x=1)=\\frac{p(x=1,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$\n",
+    "$$p(y=0|x=1)=\\frac{p(x=1,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "$$p(y=1|x=0)=\\frac{p(x=0,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3}.$$"
    ]
