--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -324,9 +324,21 @@
    "source": [
     "1. point\n",
     "\n",
-    "$$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=$$\n",
-    "$$=E[(xy-xE[y]-E[x]y+E[x]E[y])]=$$\n",
-    "$$=E[xy]-2E[x]E[y]+E[x]E[y]=E[xy]-E[x]E[y].$$ QED\n"
+    "$$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=E[(xy-xE[y]-E[x]y+E[x]E[y])]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=E[xy]-2E[x]E[y]+E[x]E[y]=E[xy]-E[x]E[y].$$ QED"
    ]
   },
   {
@@ -335,10 +347,27 @@
    "source": [
     "2. point\n",
     "\n",
-    "$$\\text{Var[x+y]}=$$\n",
-    "$$=E[(x+y-(E[x]+E[y])^{2})]=$$\n",
-    "$$=E[(x+y)^{2}]+E[(E[x]+E[y])^{2}]-2E[(x+y)(E[x]+E[y])].$$\n",
-    "\n",
+    "$$\\text{Var[x+y]}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=E[(x+y-(E[x]+E[y])^{2})]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=E[(x+y)^{2}]+E[(E[x]+E[y])^{2}]-2E[(x+y)(E[x]+E[y])].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now we expand the parenthesis of arguments from the statement above:\n",
     "\n",
     "$$\\text{Var[x+y]}=$$\n",
@@ -352,8 +381,13 @@
     "Having expanded the arguments we can proceede with using linearity, we get:\n",
     "\n",
     "$$\\text{Var[x+y]}=$$\n",
-    "$$=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$\n",
-    "\n",
+    "$$=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let us rearrange the terms so that we obtain the formula we were asked to prove:\n",
     "\n",
     "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=$$\n",
