--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -46,9 +46,9 @@
     "### Problem 2\n",
     "Show that:\n",
     "\n",
-    "$$P(B) = \\sum_{i} P(B|A_{i}) \\cdot P(A_{i})$$\n",
+    "(5) $$P(B) = \\sum_{i} P(B|A_{i}) \\cdot P(A_{i})$$\n",
     "\n",
-    "for $A_{i}$ being disjoint sets, partitioning the whole sample space ($\\Omega = \\bigcup_{i} A_{i}$ ) and\n",
+    "for $A_{i}$ being disjoint sets, partitioning the whole sample space $\\left(\\Omega = \\bigcup_{i} A_{i}\\right)$ and\n",
     "$P(A_{i})>0$ for all $I$"
    ]
   },
@@ -56,11 +56,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$B=\\bigcup_{i} B \\cap A_{i}$$\n",
+    "\n",
+    "\n",
+    "(6) $$B=\\bigcup_{i} B \\cap A_{i}$$\n",
     "\n",
     "Consequently:\n",
     "\n",
-    "$$P(B)=\\sum_{i}P(B \\cap A_{i})=\\sum_{i}\\frac{P(B\\cap A_{i})}{P(A_{i})}P(A_{i})=\\sum_{i}P(B|A_{i})P(A_{i}).$$\n",
+    "(7) $$P(B)=\\sum_{i}P(B \\cap A_{i})=\\sum_{i}\\frac{P(B\\cap A_{i})}{P(A_{i})}P(A_{i})=\\sum_{i}P(B|A_{i})P(A_{i}).$$\n",
     "\n",
     "QED"
    ]
@@ -77,16 +79,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$EPE(f) = E_{x,y}[L(f(x),y)] = \\int \\int L(f(x),y) \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int L(f(x),y) \\rho_{y|x} dy\\right) dx.$$"
+    "(8) $$EPE(f) = E_{x,y}[L(f(x),y)] = \\int \\int L(f(x),y) \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int L(f(x),y) \\rho_{y|x} dy\\right) dx.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$\n",
+    "(9) $$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$\n",
     "\n",
-    "$$EPE(f) = E_{x,y}[|f(x)-y||x] = E_{x}[E_{y|x}[|f(x)-y||x]].$$"
+    "(10) $$EPE(f) = E_{x,y}[|f(x)-y||x] = E_{x}[E_{y|x}[|f(x)-y||x]].$$"
    ]
   },
   {
@@ -95,14 +97,14 @@
    "source": [
     "EPE will be minimal for:\n",
     "    \n",
-    "$$\\frac{d}{d[f(x)]}E_{y|x}\\left[|f(x)-y||x\\right]=E_{y|x}\\left[\\left\\{\\frac{d}{d[f(x)]}|f(x)-y|\\right\\}|x\\right]=0.$$"
+    "(11) $$\\frac{d}{d[f(x)]}E_{y|x}\\left[|f(x)-y||x\\right]=E_{y|x}\\left[\\left\\{\\frac{d}{d[f(x)]}|f(x)-y|\\right\\}|x\\right]=0.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E_{y|x}[\\text{sign}(f(x)-y)|x]=E_{y|x}[0|x],$$"
+    "(12) $$E_{y|x}[\\text{sign}(f(x)-y)|x]=E_{y|x}[0|x],$$"
    ]
   },
   {
@@ -111,14 +113,19 @@
    "source": [
     "which is equivalent to:\n",
     "    \n",
-    "$$\\int_{f(x)}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy.$$\n",
-    "\n",
+    "(13) $$\\int_{f(x)}^{+\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The above equation impies that:\n",
     "\n",
-    "$$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1,$$\n",
+    "(14) $$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1,$$\n",
     "\n",
     "\n",
-    "$$2\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1.$$"
+    "(15) $$2\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1.$$"
    ]
   },
   {
@@ -127,9 +134,9 @@
    "source": [
     "Finally we get:\n",
     "    \n",
-    "$$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
+    "(16) $$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
-    "$$\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
+    "(17) $$\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
     "which indicates that the most optimal $f(x)$ can be interpreted as median of $\\rho_{y|x}$."
    ]
@@ -146,18 +153,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$EPE(f) = E_{x,y}[L(f(x),y)] = \\int \\int L(f(x),y) \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int L(f(x),y) \\rho_{y|x} dy\\right) dx.$$"
+    "(18) $$EPE(f) = E_{x,y}[L(f(x),y)] = \\int \\int L(f(x),y) \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int L(f(x),y) \\rho_{y|x} dy\\right) dx.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = \\int \\int (f(x)-y)^{2} \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int (f(x)-y)^{2} \\rho_{y|x} dy\\right) dx.$$\n",
+    "(19) $$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = \\int \\int (f(x)-y)^{2} \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int (f(x)-y)^{2} \\rho_{y|x} dy\\right) dx.$$\n",
     "\n",
     "\n",
     "\n",
-    "$$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = E_{x}[E_{y|x}[(f(x)-y)^{2}]].$$"
+    "(20) $$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = E_{x}[E_{y|x}[(f(x)-y)^{2}]].$$"
    ]
   },
   {
@@ -173,25 +180,25 @@
    "source": [
     "For a single point $x=x_{0}$:\n",
     "\n",
-    "$$E_{y|x}[(f(x)-y)^{2}|x=x_{0}]=E_{y|x}[(c-y)^{2}|x=x_{0}].$$\n",
+    "(21) $$E_{y|x}[(f(x)-y)^{2}|x=x_{0}]=E_{y|x}[(c-y)^{2}|x=x_{0}].$$\n",
     "\n",
     "EPE will be minimal when:\n",
     "\n",
-    "$$\\frac{d}{dc}E_{y|x}[(c-y)^{2}|x=x_{0}]=0.$$\n"
+    "(22) $$\\frac{d}{dc}E_{y|x}[(c-y)^{2}|x=x_{0}]=0.$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E_{y|x}[\\frac{d}{dc}(c-y)^{2}|x=x_{0}]=E_{y|x}[0|x=x_{0}].$$"
+    "(23) $$E_{y|x}[\\frac{d}{dc}(c-y)^{2}|x=x_{0}]=E_{y|x}[0|x=x_{0}].$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E[c|x=x_{0}]=E[y|x=x_{0}]$$"
+    "(24) $$E[c|x=x_{0}]=E[y|x=x_{0}]$$"
    ]
   },
   {
@@ -199,7 +206,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "$$E[f(x_{0})|x=x_{0}]=E[y|x=x_{0}]$$"
+    "(25) $$E[f(x_{0})|x=x_{0}]=E[y|x=x_{0}]$$"
    ]
   },
   {
@@ -208,7 +215,7 @@
    "source": [
     "Consequently, we can see that the most optimal solution is:\n",
     "\n",
-    "$$f^{*}(x)=E[y|x].$$"
+    "(26) $$f^{*}(x)=E[y|x].$$"
    ]
   },
   {
@@ -217,7 +224,8 @@
    "source": [
     "### Problem 12\n",
     "Show that:\n",
-    "$$\\text{Var}[x] = E[x^{2}] – E^{2}[x].$$"
+    "\n",
+    "(27) $$\\text{Var}[x] = E[x^{2}] - E^{2}[x].$$"
    ]
   },
   {
@@ -226,7 +234,7 @@
    "source": [
     "First of all let us notice that:\n",
     "\n",
-    "(1) $$E[x]=\\mu=\\int x f(x) dx.$$"
+    "(28) $$E[x]=\\mu=\\int x f(x) dx.$$"
    ]
   },
   {
@@ -235,14 +243,14 @@
    "source": [
     "Secondly, let us write the expression for $E[X^{2}]$:\n",
     "    \n",
-    "(2) $$E[x^{2}]=\\int x^{2} f(x) dx.$$"
+    "(29) $$E[x^{2}]=\\int x^{2} f(x) dx.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3)$$\\text{Var}[x]=E[(x-E[x])^{2}]=E[(x-\\mu)^{2}]=\\int (x-\\mu)^{2} f(x) dx =\n",
+    "(30)$$\\text{Var}[x]=E[(x-E[x])^{2}]=E[(x-\\mu)^{2}]=\\int (x-\\mu)^{2} f(x) dx =\n",
     "\\int x^{2} f(x) dx - 2\\mu\\int x f(x) dx+\\mu^{2}\\int f(x)dx=\\left(\\int x^{2}f(x) dx\\right)-\\mu^{2}=E[x^{2}]-E^{2}[x].$$\n",
     "\n",
     "QED."
@@ -254,36 +262,10 @@
    "source": [
     "Alternatively:\n",
     "    \n",
-    "$$\\text{Var}(x)=E[(x-E[x])^{2}]=E[x^{2}]-2xE[x]+E[x]^{2}=E[x^{2}]-2E[x]E[x]+E^{2}[x]=E[x^{2}]-E^{2}[x].$$\n",
+    "(31) $$\\text{Var}(x)=E[(x-E[x])^{2}]=E[x^{2}]-2xE[x]+E[x]^{2}=E[x^{2}]-2E[x]E[x]+E^{2}[x]=E[x^{2}]-E^{2}[x].$$\n",
     "\n",
     "QED"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problem 21\n",
-    "\n",
-    "Rolling a die Ω = { 1 , 2 , 3 , 4 , 5, 6 }\n",
-    "X is 1 if even number 0 otherwise.\n",
-    "Y is 1 if prime number 0 otherwise.\n",
-    "\n",
-    "* Calculate joint PMF\n",
-    "\n",
-    "* Calculate marginal PMF of $x$ and of $y$\n",
-    "\n",
-    "* Calculate conditional PMF $p_{y|x} (r|x=1)$\n",
-    "\n",
-    "* Check if $h(k) = p_{y|x} (r|k)$ is a proper probability function with respect to $k$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -299,11 +281,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can find the conditional PDF $f_{y|x}(y|x)$ by applying the definition from the lecture:\n",
+    "    \n",
+    "(32) $$f_{x|y}(x|y)=\\frac{f_{x,y}(x,y)}{f_{x}(x)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The joint PDF is:\n",
+    "\n",
+    "(33) $$f_{x,y}(x,y)=\\begin{cases}\n",
+    "&x+y, \\qquad \\text{for} \\qquad 0<x<1, 0<y<1,\\\\\n",
+    "&0  , \\qquad \\qquad \\text{other values}\\end{cases}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(34) $$f_{x}(x)=\\int_{-\\infty}^\\infty f_{x,y}(x,y) dy = \\int_0^1 (x+y) dy = x+\\frac{1}{2}, \\qquad 0<x<1.$$\n",
+    "\n",
+    "\n",
+    "Consequently, the conditional PDF can be expressed as:\n",
+    "\n",
+    "(35) $$f_{y|x}(y|x)=\\frac{x+y}{x+\\frac{1}{2}}, \\qquad \\text{for} \\qquad  0<x<1, 0<y<1,$$\n",
+    "\n",
+    "and $f_{y|x}(y|x)=0$ outside of $ 0<x<1, 0<y<1$ space.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us integrate $f_{y|x}(y|x)$ over y:\n",
+    "    \n",
+    "(36) $$\\int_{0}^{1} f_{y|x}(y|x)dy = \\int_{0}^{1} \\frac{x+y}{x+\\frac{1}{2}}dy=\\frac{xy}{x+\\frac{1}{2}}+\\frac{\\frac{y^{2}}{2}}{x+\\frac{1}{2}}\\Biggr|^{1}_{0}=\\frac{x+\\frac{1}{2}}{x+\\frac{1}{2}}=1.$$\n",
+    "\n",
+    "QED"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,17 +418,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 25\n",
+    "### Problem 21\n",
     "\n",
     "Rolling a die Ω = { 1 , 2 , 3 , 4 , 5, 6 }\n",
-    "\n",
     "X is 1 if even number 0 otherwise.\n",
-    "\n",
     "Y is 1 if prime number 0 otherwise.\n",
     "\n",
-    "* Calculate E[Y|1], E[Y|0]\n",
+    "* Calculate joint PMF\n",
     "\n",
-    "* Var[Y|1], Var[Y|0]"
+    "* Calculate marginal PMF of $x$ and of $y$\n",
+    "\n",
+    "* Calculate conditional PMF $p_{y|x} (r|x=1)$\n",
+    "\n",
+    "* Check if $h(k) = p_{y|x} (r|k)$ is a proper probability mass function with respect to $k$."
    ]
   },
   {
@@ -429,7 +451,14 @@
     "\n",
     "$$p(x=1)=\\frac{1}{2},$$\n",
     "\n",
-    "$$p(x=0)=\\frac{1}{2},$$"
+    "$$p(x=0)=\\frac{1}{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us find the joint PMF of x and y:"
    ]
   },
   {
@@ -464,7 +493,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That is why we have:\n",
+    "Next, we can calculate mariginal PMF of x:\n",
+    "\n",
+    "$$p_{x}(k)=\\sum_{r} p(x=k,y=r)= p(x=k, y=0) + p(x=k|y=1),$$\n",
+    "\n",
+    "which yields:\n",
+    "\n",
+    "$$p_{x}(0)=\\frac{1}{2},$$\n",
+    "\n",
+    "$$p_{x}(1)=\\frac{1}{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, we can calculate mariginal PMF of y:\n",
+    "\n",
+    "$$p_{y}(k)=\\sum_{r} p(x=r, y=k)= p(x=0, y=k) + p(x=1,y=k).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which yields:\n",
+    "\n",
+    "$$p_{y}(0)=\\frac{1}{2},$$\n",
+    "\n",
+    "$$p_{y}(1)=\\frac{1}{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets calculate conditional PMF:\n",
     "    \n",
     "$$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$"
    ]
@@ -496,7 +560,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we substitute these values to the definition of conditional expectation value for the lecture we will get:\n",
+    "$h(k)=\\sum_r p(y=r,x=k)$ is a proper probability function if\n",
+    "\n",
+    "\n",
+    "$$\\sum_{k}\\sum_r p(y=r,x=k)=1$$.\n",
+    "\n",
+    "If we look at the () we will see that this is indeed true:\n",
+    "\n",
+    "\n",
+    "$$\\sum_{k}\\sum_r p(y=r,x=k)=p(x=1,y=1)+p(x=0,y=0)+p(x=1,y=0)+p(x=0,y=1)=\\frac{1}{6}+\\frac{1}{6}+\\frac{2}{6}+\\frac{2}{6}=1.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 25\n",
+    "\n",
+    "Rolling a die Ω = { 1 , 2 , 3 , 4 , 5, 6 }\n",
+    "\n",
+    "X is 1 if even number 0 otherwise.\n",
+    "\n",
+    "Y is 1 if prime number 0 otherwise.\n",
+    "\n",
+    "* Calculate E[Y|1], E[Y|0]\n",
+    "\n",
+    "* Var[Y|1], Var[Y|0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to solve this problem we can use the definition of expectation value from the lecture and the values of probability mass function values obtained in the previous task.\n",
+    "\n",
     "\n",
     "$$E[y|1]=\\sum_r r\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3$$"
    ]
