Finished last touches.

--- a/assignment_till_20.11.ipynb
+++ b/assignment_till_20.11.ipynb
@@ -85,7 +85,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "fffffggfgfhjhjh"
+    "Let's start from the definition of the expected prediction error $EPE$\n",
+    "\n",
+    "$$EPE[f]=E_{X,Y}[L(f(X)-Y)]=\\int\\int L\\big(f(x),y\\big)\\rho_{XY}(x,y)dx dy=\\int dx \\rho_X(x)\\int dy (f(x)-y)^2\\rho_{Y|X}(y|x)=\\\\\n",
+    "= E_X\\bigg[E_{Y|X}\\big[(f(x)-y)^2|x\\big] \\bigg]\n",
+    "$$\n",
+    "\n",
+    "where $L\\big(f(x),y\\big)$ is the loss function and $\\rho_{XY}(x,y)$ is the joint PDF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We treat the problem point-wise, by searching for the optimal solution in $x=x_0$, with $f(x_0)=c$ constant. The derivative and the expected value commute, as linear operators, so we focus on $E_{Y|X}\\big[|f(x)-y||x\\big]$:\n",
+    "\n",
+    "$$\\frac{d}{dc}E_{Y|X}\\big[|c-y||x=x_0\\big]=0\\quad \\Longrightarrow \\quad E_{Y|X}\\big[sign(c-y)|x=x_0\\big]=0\\\\\n",
+    "\\quad \\Longrightarrow \\quad \\int_c^\\infty \\rho_{Y|X}(y|x)dy=\\int_{-\\infty}^c \\rho_{Y|X}(y|x)dy$$\n",
+    "\n",
+    "By summing $\\int_{-\\infty}^c \\rho_{Y|X}(y|x)dy$ or $\\int_c^\\infty \\rho_{Y|X}(y|x)dy$ to both sides, one equation at a time, we get\n",
+    "\n",
+    "$$1=\\int_{-\\infty}^\\infty \\rho_{Y|X}(y|x)dy=2\\int_{-\\infty}^c \\rho_{Y|X}(y|x)dy=2\\int_c^\\infty \\rho_{Y|X}(y|x)dy\\\\\n",
+    "\\Longrightarrow \\quad \\int_{-\\infty}^c \\rho_{Y|X}(y|x)dy=\\int_c^\\infty \\rho_{Y|X}(y|x)dy=\\frac{1}{2}$$\n",
+    "\n",
+    "which means that the optimal algorithm is the median of $\\rho_{Y|X}(y|x)$."
    ]
   },
   {
@@ -100,7 +123,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dfffdg"
+    "Let's start from the definition of the expected prediction error $EPE$\n",
+    "\n",
+    "$$EPE[f]=E_{X,Y}[L(f(X)-Y)]=\\int\\int L\\big(f(x),y\\big)\\rho_{XY}(x,y)dx dy=\\int dx \\rho_X(x)\\int dy (f(x)-y)^2\\rho_{Y|X}(y|x)=\\\\\n",
+    "= E_X\\bigg[E_{Y|X}\\big[(f(x)-y)^2|x\\big] \\bigg]\n",
+    "$$\n",
+    "\n",
+    "where $L\\big(f(x),y\\big)$ is the loss function and $\\rho_{XY}(x,y)$ is the joint PDF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We treat the problem point-wise, by searching for the optimal solution in $x=x_0$, with $f(x_0)=c$ constant. The derivative and the expected value commute, as linear operators, so we focus on $E_{Y|X}\\big[(f(x)-y)^2|x\\big]$:\n",
+    "\n",
+    "$$\\frac{d}{dc}E_{Y|X}\\big[(c-y)^2|x=x_0\\big]=0\\quad \\Longrightarrow \\quad E_{Y|X}\\big[(c-y)|x=x_0\\big]=0\\\\\n",
+    "\\quad \\Longrightarrow \\quad E_{Y|X}\\big[c|x=x_0\\big]=E_{Y|X}\\big[y|x=x_0\\big]\\quad \\Longrightarrow \\quad c=f(x_0)=y\n",
+    "$$\n",
+    "\n",
+    "Then the optimal algorithm for the quadratic loss function is\n",
+    "\n",
+    "$$f^*(x)=E[y|x]$$"
    ]
   },
   {
@@ -120,6 +164,13 @@
     "       =E[X^2-2XE[X]+E[X]^2]\\\\\n",
     "       =E[X^2]-2E[X]E[X]+E[X]^2\\\\\n",
     "       =E[X^2]-E[X]^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This expression was showed to be true exploiting the linearity of $E[X]$ and the fact that $E[E[X]]=E[X]$ for an arbitrary random variable $X$."
    ]
   },
   {
@@ -545,6 +596,13 @@
     "          =E[X^2]+2E[XY]+E[Y^2]-E[X]^2-2E[X]E[Y]-E[Y]^2\\\\\n",
     "          =Var[X]+Var[Y]+2E[XY]-2E[X]E[Y]\\\\\n",
     "          =Var[X]+Var[Y]+2Cov(X,Y)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both expressions were showed to be true exploiting the linearity of $E[X]$ and the fact that $E[E[X]]=E[X]$ for an arbitrary random variable $X$. The last line of the second proof is obtained by employing the definitions of covariance and variance."
    ]
   },
   {
